AA-2006-12-07-0: Cleanup:   arco jtestcase removal

JG-2006-12-06-0: Enhancem.: The set_error call is no longer needed.
                            Cleanup in testsuite framework starting checks.
                            Eliminate set_error from checks (step 1).
                 Issue:     10
                 Review:    RD

JG-2006-12-04-0: Bugfix:    Opening connections to windows hosts as non 
                            domain CHECK_USER was broken due to 
                            JG-2006-11-30-0.
                 Review:    HP

CR-2006-12-04-0: Enhancem.: Added test for "hostname resolving should not
                            be case sensitive"
                 Review:    RD

JG-2006-12-01-1: Enhancem.: Build libdrmaa.jar with SGE 6.0.
                 Issue:     73
                 Review:    RD

RD-2006-12-01-0: Enhancem:  Added test for qacct -l h=<hostname> dump core
                 Review:    JG

JG-2006-12-01-0: Bugfix:    qconf test failed if no "non_cluster_host" is 
                            available.
                            qrsh test failed on NetBSD and Interix.
                 Review:    RD

JG-2006-11-30-0: Bugfix:    - open_remote_spawn_process failed on some interix
                              version.
                            - commandline switch close_rlogin was broken
                 Enhancem.: sge.root propterty is no longer needed in 
                            build_testsuite.properties for java build
                 Review:    RD

HP-2006-11-28-0: Enhancem.: Added comment
                 Changed:   system_tests/windows/sgepasswd

HP-2006-11-27-0: Bugfix:    All keys from /var/sgeCA where moved away for this
                            test, now only the key for this particular test 
                            is moved away.
                 Changed:   sytem_tests/windows/sgepasswd

JG-2006-11-27-0: Bugfix:    The checktree_arco was moved to this project from