@@ -985,6 +985,10 @@ proc translate { host remove_control_signs is_script no_input_parsing msg_txt { 
    set msg_text [replace_string $msg_text "PAR_5" $par5]
    set msg_text [replace_string $msg_text "PAR_6" $par6]
 
+   if {[string first "-" $msg_text] >= 0} {
+      puts $CHECK_OUTPUT "ATTENTION, translated message contains dashes\nuse the -- option on expect pattern line\n$msg_txt"
+   }
+
    return $msg_text
 }
 
