@@ -1,3 +1,7 @@
+JG-2006-12-08-0: Bugfix:    Fixed a TCL error introduced by JG-2006-12-06-0.
+                            Fixed installation of SGE 6.0, 6.0u1, 6.0u2, ...
+                 Review:    RD
+
 AA-2006-12-07-0: Cleanup:   arco jtestcase removal
 
 JG-2006-12-06-0: Enhancem.: The set_error call is no longer needed.
